# dictd

./: ANNOUNCE  COPYING.look  ChangeLog  INITSCRIPT  INSTALL  Makefile  Makefile.conf  Makefile.in  Makefile.inc  NEWS  README  README.pod  TODO  buildindex.1  buildindex.c  clientparse.y  clientscan.l  codes.h  colorit.1  colorit.1.in  colorit.in  compress2.c  compress3.c  compressdict.1  compressdict.c  config  config.h.in  config.sub  configure.ac  configure.in  daemon.c  daemon3.c  data.c  data.h  decl.h  decode.c  decode.c.save  defs.h  deps  dict.1  (+93 more)
colorit/: Makefile  colorit.1.in  colorit.in
dict/: Makefile  clientparse.y  dict.1.in  dict.c  dict.conf  dict.h  net_client.c
dict_lookup/: Makefile
dictd/: Makefile  daemon.c  daemon3.c  dictd.8.in  dictd.c  dictd.h  net.c  net_server.c  plugin.c  plugin.h  servparse.y
dictdplugins/dictdplugin_dbi/: Makefile  dictdplugin_dbi.c  plugins_common.c
dictdplugins/dictdplugin_exit/: dictdplugin_exit.c
dictdplugins/dictdplugin_judy/: Makefile  dictdplugin_judy.c
dictdplugins/include/: Makefile  dictdplugin.h
dictfmt/: Makefile  dictfmt.c
dictl/: Makefile
dictzip/: Makefile  dictzip.c  dictzip.h
doc/: INSTALL  INSTALL.pod  Makefile.in  NEWS  design.tex  rfc.ms  webster.out
examples/: dictd4.conf  dictd_complex.conf  dictd_popen.conf  dictd_virtual.conf
libcommon/: Makefile  common.h  defs.h  heap.c  heap.h  io.c  md5.c  md5.h  net.h  parse.c  setutf8locale.c  str.c  str.h
libdictd/: Makefile  data.c  data.h  defs.h  index.c  index.h  lev.h  strategy.c  strategy.h
regex/: Makefile  README.DICT  regcomp.c
test/: cyrillic_nodetach_expect.out  db.expect.cyrillic_1.dict  db.expect.cyrillic_1.index  db.expect.dict  db.expect.hello_1.dict  db.expect.hello_2.dict  db.expect.hello_3.dict  db.expect.hello_4.dict  db.expect.hello_5.dict  db.expect.hello_5.index  db.expect.index  db.expect.indexdata_1.dict  db.expect.indexdata_1.index  db.expect.mixedcase_1.dict  db.expect.smiley_1.dict  db.expect.smiley_1.index  db.expect.smiley_2.dict  db.expect.smiley_2.index  db.expect.smiley_3.dict  db.expect.smiley_3.index  db.expect.smiley_4.dict  db.expect.smiley_4.index  db.expect.smiley_5.dict  db.expect.smiley_5.index  dictd_cyrillic_1_res.expected.txt  dictd_cyrillic_3_res.expected.txt  dictd_defstrat_1_res.expected.txt  dictd_defstrat_2_res.expected.txt  dictd_hello_1_res.expected.txt  dictd_hello_2_res.expected.txt  dictd_hello_3_res.expected.txt  dictd_hello_4_res.expected.txt  dictd_hello_5_res.expected.txt  dictd_indexdata_1_res.expected.txt  dictd_limits_1_res.expected.txt  dictd_mixedcase_1_res.expected.txt  dictd_smiley_1_res.expected.txt  dictd_smiley_2_res.expected.txt  dictd_smiley_3_res.expected.txt  dictd_smiley_4_res.expected.txt  (+31 more)
zlib/: ChangeLog  Makefile  README.DICT  adler32.c  compress.c  crc32.c  deflate.c  deflate.h  example.c  gzio.c  infblock.c  minigzip.c  trees.c  uncompr.c  zconf.h  zutil.c  zutil.h
